--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 179,
       "metadata": {
         "id": "s0phKx7V7re0"
       },
@@ -22,7 +22,7 @@
       "metadata": {
         "id": "G3Q15-VJ76bL"
       },
-      "execution_count": null,
+      "execution_count": 180,
       "outputs": []
     },
     {
@@ -36,9 +36,9 @@
           "height": 398
         },
         "id": "sSrZ5Hfx8bQf",
-        "outputId": "882b37ba-4c01-4e79-ff50-4386170cacf2"
+        "outputId": "b1f1de3a-5082-437d-962d-f223d7fa0e89"
       },
-      "execution_count": null,
+      "execution_count": 181,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -125,7 +125,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 144
+          "execution_count": 181
         }
       ]
     },
@@ -137,13 +137,13 @@
       ],
       "metadata": {
         "id": "3V1UTLEi8cFh",
-        "outputId": "6d3db6d2-372c-449f-d02a-a417dd7e1992",
+        "outputId": "ead40787-caea-4dca-814f-a32e9f4eeece",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 398
         }
       },
-      "execution_count": null,
+      "execution_count": 182,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,7 +230,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 145
+          "execution_count": 182
         }
       ]
     },
@@ -243,13 +243,13 @@
       ],
       "metadata": {
         "id": "4M6bttPgBPht",
-        "outputId": "6f796b9d-77b3-42eb-f943-716f590fbfc6",
+        "outputId": "778d710c-cccd-4fcf-836b-12a81b19c13b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 429
         }
       },
-      "execution_count": null,
+      "execution_count": 183,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -341,7 +341,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 146
+          "execution_count": 183
         }
       ]
     },
@@ -360,13 +360,13 @@
       ],
       "metadata": {
         "id": "1x1sWnZ1GXLd",
-        "outputId": "9b04aa88-b833-45d8-921b-3d58e37a5cb5",
+        "outputId": "a0b5a522-c447-4b7e-fbe8-f1994b4b17f6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 564
         }
       },
-      "execution_count": null,
+      "execution_count": 184,
       "outputs": [
         {
           "output_type": "display_data",
@@ -390,13 +390,13 @@
       ],
       "metadata": {
         "id": "qZryWkMDHSFW",
-        "outputId": "fefe06ce-100c-438a-ff86-e551983de862",
+        "outputId": "992a8c6a-de09-4939-a547-01ae1015e8fb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 429
         }
       },
-      "execution_count": null,
+      "execution_count": 185,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -488,7 +488,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 148
+          "execution_count": 185
         }
       ]
     },
@@ -514,13 +514,13 @@
       ],
       "metadata": {
         "id": "wgPm7YYGBnYM",
-        "outputId": "4b375dab-af1f-4776-c0b9-8b8782d1aef6",
+        "outputId": "3b0b37b1-f4ff-44fb-f9fa-48186092d1b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
         }
       },
-      "execution_count": null,
+      "execution_count": 186,
       "outputs": [
         {
           "output_type": "display_data",
@@ -537,19 +537,19 @@
     {
       "cell_type": "code",
       "source": [
-        "# Top 10 stations with most delays (appeared most in the given dataset)\n",
+        "# Delays in each Line\n",
         "line_counts = not_null_df['Line'].value_counts().sort_values(ascending=False).sort_values(ascending=False)\n",
         "line_counts"
       ],
       "metadata": {
         "id": "mvrVb6aeIAk3",
-        "outputId": "28eb4ed7-2921-4a2b-a27e-1f5b2990fb14",
+        "outputId": "138f085a-946d-4396-85fe-95352806f052",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 335
         }
       },
-      "execution_count": null,
+      "execution_count": 187,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -626,7 +626,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 150
+          "execution_count": 187
         }
       ]
     },
@@ -645,13 +645,13 @@
       ],
       "metadata": {
         "id": "nMq1z5LgFUBX",
-        "outputId": "bbbef165-5e7d-4c64-ae07-d7b1b3cc0f34",
+        "outputId": "486d9d2b-426c-43ca-a2fe-d3d422e5e7c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
         }
       },
-      "execution_count": null,
+      "execution_count": 188,
       "outputs": [
         {
           "output_type": "display_data",
@@ -668,20 +668,20 @@
     {
       "cell_type": "code",
       "source": [
-        "# Top 10 stations with most delays (appeared most in the given dataset)\n",
+        "# Top 10 vehicles with most delays (appeared most in the given dataset)\n",
         "delays_incl_zero = not_null_df[not_null_df['Min Delay'] >= 0]\n",
         "vehicle_counts = delays_incl_zero['Vehicle'].value_counts().sort_values(ascending=False)\n",
         "vehicle_counts.head(10)\n"
       ],
       "metadata": {
         "id": "sKkA6RuLL7ag",
-        "outputId": "00bef7d2-b40f-4fa1-b62a-12b553f094f9",
+        "outputId": "72e89962-9036-4ef0-b096-d5970b2e4689",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 429
         }
       },
-      "execution_count": 176,
+      "execution_count": 189,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -773,7 +773,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 176
+          "execution_count": 189
         }
       ]
     },
@@ -799,13 +799,13 @@
       ],
       "metadata": {
         "id": "QwCyigYEMJpL",
-        "outputId": "d4b7880a-26e2-4472-b309-403a1570787c",
+        "outputId": "6235225e-c451-452d-ad67-4741de7b74d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
         }
       },
-      "execution_count": 178,
+      "execution_count": 190,
       "outputs": [
         {
           "output_type": "display_data",
@@ -825,7 +825,7 @@
       "metadata": {
         "id": "grGXlFPMMdqf"
       },
-      "execution_count": null,
+      "execution_count": 190,
       "outputs": []
     },
     {
@@ -836,13 +836,13 @@
       ],
       "metadata": {
         "id": "f3ttLfLNMbE8",
-        "outputId": "b7702ec4-1e5f-408e-e94d-d6317d565a8b",
+        "outputId": "73acb28e-4791-4db4-882b-44a2e575f6bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 429
         }
       },
-      "execution_count": null,
+      "execution_count": 191,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -934,7 +934,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 154
+          "execution_count": 191
         }
       ]
     },
@@ -956,13 +956,13 @@
       ],
       "metadata": {
         "id": "bwMnDaoyPT2D",
-        "outputId": "a1bd30b5-ea07-4dbd-a966-be682b77c022",
+        "outputId": "3642ff93-2e81-4090-dd09-3a73ff1af164",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
         }
       },
-      "execution_count": null,
+      "execution_count": 192,
       "outputs": [
         {
           "output_type": "display_data",
@@ -986,7 +986,7 @@
       "metadata": {
         "id": "gjB4nlHNPdRU"
       },
-      "execution_count": null,
+      "execution_count": 193,
       "outputs": []
     },
     {
@@ -1004,13 +1004,13 @@
       ],
       "metadata": {
         "id": "i-W7YgaySDfL",
-        "outputId": "450eb4fc-b178-4546-ecd8-e40a2e403e22",
+        "outputId": "25c6fac0-0a7c-496c-d78c-3e8c40e2b375",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
         }
       },
-      "execution_count": null,
+      "execution_count": 194,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1033,13 +1033,13 @@
       ],
       "metadata": {
         "id": "YuyPBvlYSSQ7",
-        "outputId": "ac6c2d49-7746-46a1-828f-2d922dbe1aa8",
+        "outputId": "12d36d4b-c5d8-48f4-901d-9b5b4d61c984",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 272
         }
       },
-      "execution_count": null,
+      "execution_count": 195,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1106,7 +1106,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 158
+          "execution_count": 195
         }
       ]
     },
@@ -1131,13 +1131,13 @@
       ],
       "metadata": {
         "id": "HREiCrIGURRE",
-        "outputId": "3f0527a7-fa7b-45e0-d915-5aa2f6b8ed33",
+        "outputId": "97945e99-b985-4882-a97d-baeaebd09837",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 807
         }
       },
-      "execution_count": null,
+      "execution_count": 196,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1160,13 +1160,13 @@
       ],
       "metadata": {
         "id": "UgiBNCOCUmjZ",
-        "outputId": "d78477ad-6b9a-42f1-fa16-9bed0029b33a",
+        "outputId": "37659e71-512e-4752-e975-88fd5b4f054e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 429
         }
       },
-      "execution_count": null,
+      "execution_count": 197,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1258,7 +1258,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 160
+          "execution_count": 197
         }
       ]
     },
@@ -1285,13 +1285,13 @@
       ],
       "metadata": {
         "id": "LuyGqJKSVZWQ",
-        "outputId": "5473ab91-4435-41d0-b27c-215c63d01067",
+        "outputId": "88e1e15a-a23e-42cd-f166-ce780f0a4c5b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
         }
       },
-      "execution_count": null,
+      "execution_count": 198,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1329,13 +1329,13 @@
       ],
       "metadata": {
         "id": "Fpye05UsV4y8",
-        "outputId": "45840708-a62d-470e-d256-1fecb87e987f",
+        "outputId": "f6805d22-1ca6-45ad-94fa-b68ac8884614",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
         }
       },
-      "execution_count": null,
+      "execution_count": 199,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1372,13 +1372,13 @@
       ],
       "metadata": {
         "id": "wH6zaLF_WCwd",
-        "outputId": "50667bd2-e46f-4bf7-a4b9-3b871b4767c7",
+        "outputId": "ca76576b-7d21-4783-fce2-3a3c24d5e505",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
         }
       },
-      "execution_count": null,
+      "execution_count": 200,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1401,13 +1401,13 @@
       ],
       "metadata": {
         "id": "7YQPvQQ0W4jM",
-        "outputId": "8231ee0f-a8ff-4f88-96b4-2f01de1dc032",
+        "outputId": "deedf292-2b16-4270-c163-a78e0da04ad6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 429
         }
       },
-      "execution_count": null,
+      "execution_count": 201,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1499,7 +1499,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 164
+          "execution_count": 201
         }
       ]
     },
@@ -1529,13 +1529,13 @@
       ],
       "metadata": {
         "id": "8rMTxgDHXWUg",
-        "outputId": "13ad63dc-8a72-4d17-914d-7fb19397e740",
+        "outputId": "986bfcb1-015d-4c3c-dbad-9a760dc460f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 707
         }
       },
-      "execution_count": null,
+      "execution_count": 202,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1557,7 +1557,7 @@
       "metadata": {
         "id": "GFeOJdRvXm_H"
       },
-      "execution_count": null,
+      "execution_count": 203,
       "outputs": []
     },
     {
@@ -1567,12 +1567,12 @@
       ],
       "metadata": {
         "id": "9J2si4bkYCEn",
-        "outputId": "a568efa5-a436-45fd-d5a2-b9e4d2e9050d",
+        "outputId": "fb550ef6-957c-4268-d8e1-3efbcda27cea",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 204,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1582,7 +1582,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 167
+          "execution_count": 204
         }
       ]
     },
@@ -1599,13 +1599,13 @@
       ],
       "metadata": {
         "id": "UzVxB8ghYEp5",
-        "outputId": "5cc10630-e318-4274-fb5d-666f688e5c38",
+        "outputId": "811fbfba-9f00-4050-abd5-1acf13124f83",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 89
         }
       },
-      "execution_count": null,
+      "execution_count": 205,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1616,7 +1616,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6ffff1aa-3433-4b68-8ab6-e6e4f68316c5\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-059cd8de-6c7a-401a-9156-f9fcace4453d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1653,7 +1653,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6ffff1aa-3433-4b68-8ab6-e6e4f68316c5')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-059cd8de-6c7a-401a-9156-f9fcace4453d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1705,12 +1705,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6ffff1aa-3433-4b68-8ab6-e6e4f68316c5 button.colab-df-convert');\n",
+              "        document.querySelector('#df-059cd8de-6c7a-401a-9156-f9fcace4453d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6ffff1aa-3433-4b68-8ab6-e6e4f68316c5');\n",
+              "        const element = document.querySelector('#df-059cd8de-6c7a-401a-9156-f9fcace4453d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1730,7 +1730,7 @@
               "  </div>\n",
               "\n",
               "\n",
-              "  <div id=\"id_19a54580-6707-428d-8a55-ae0e94a5b9df\">\n",
+              "  <div id=\"id_486bb734-25f4-43ab-ba95-9b36fb7efb48\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1774,7 +1774,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_19a54580-6707-428d-8a55-ae0e94a5b9df button.colab-df-generate');\n",
+              "        document.querySelector('#id_486bb734-25f4-43ab-ba95-9b36fb7efb48 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1795,7 +1795,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 168
+          "execution_count": 205
         }
       ]
     },
@@ -1805,7 +1805,7 @@
       "metadata": {
         "id": "zKsnPeYHYQnO"
       },
-      "execution_count": null,
+      "execution_count": 205,
       "outputs": []
     },
     {
@@ -1814,7 +1814,7 @@
       "metadata": {
         "id": "6JOsxNbfYOMa"
       },
-      "execution_count": null,
+      "execution_count": 205,
       "outputs": []
     }
   ],
